Fix for jumping layout on scroll
Fix for jumping layout on scroll

--- a/docs/style.css
+++ b/docs/style.css
@@ -13,12 +13,13 @@
     max-width: 1024px;
     width: 100%;
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
 }
 
 .header {
     position: sticky;
     top: 0px;
-    margin: 10px 20px 50px 20px;
+    margin: 10px 20px 30px 20px;
     background-color: var(--black);
     display: grid;
     grid-template-columns: 1fr;
@@ -172,7 +173,7 @@
 
 @media (max-width: 960px) {
     .body {
-        margin: 30px;
+        margin: 30px 30px 0px 30px;
     }
 
     .main {
